--- a/templates/login.html
+++ b/templates/login.html
@@ -40,8 +40,7 @@
           <input class="w-full border rounded px-3 py-2" type="password" name="password" autocomplete="current-password" required/>
         </div>
 
-        <!-- If you add CSRF protection later (Flask-WTF), include the hidden token here -->
-        <!-- {{ form.csrf_token }} -->
+        {# If you add Flask-WTF later: {{ form.csrf_token }} #}
 
         <button class="w-full bg-gray-900 text-white px-4 py-2 rounded hover:bg-gray-800">Sign in</button>
       </form>
